<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".StyleActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inbox"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        android:paddingTop="4dp"
        android:drawableStart="@drawable/ic_action_name"
        android:drawablePadding="8dp"
        android:paddingBottom="4dp"
        android:drawableLeft="@drawable/ic_action_name" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/starred"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        android:paddingTop="4dp"
        android:drawableStart="@drawable/ic_star"
        android:drawablePadding="8dp"
        android:paddingBottom="4dp"
        android:drawableLeft="@drawable/ic_star" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/drafts"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        android:paddingTop="4dp"
        android:drawableStart="@drawable/ic_draft"
        android:drawablePadding="8dp"
        android:paddingBottom="4dp"
        android:drawableLeft="@drawable/ic_draft" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sent"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        android:paddingTop="4dp"
        android:drawableStart="@drawable/ic_sent"
        android:drawablePadding="8dp"
        android:paddingBottom="4dp"
        android:drawableLeft="@drawable/ic_sent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trash"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        android:paddingTop="4dp"
        android:drawableStart="@drawable/ic_trash"
        android:drawablePadding="8dp"
        android:paddingBottom="4dp"
        android:drawableLeft="@drawable/ic_trash" />



</LinearLayout>